Updates from Overleaf

--- a/exercise_3/paper/literature.bib
+++ b/exercise_3/paper/literature.bib
@@ -37,7 +37,14 @@
 }
 
 @misc{coco,
-  title = {COCO},
+  title = {Microsoft COCO},
   howpublished = {https://cocodataset.org/\#download}},
   note = {Accessed: 2021-02-19}
 }
+
+@misc{tax,
+  title = {BigML: U.S. IRS 2008 tax data patterns},
+  howpublished = {https://bigml.com/user/francisco/gallery/model/50c008bb3b56351981000375}},
+  note = {Accessed: 2021-02-19}
+}
+
